# lsimons-template

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/spec/: 000-shared-patterns.md
tests/: test_placeholder.py
