[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsimons-$project"
version = "0.1.0"
description = "$shortDescription"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [
    { name = "lsimons" }
]

[project.scripts]
# $project = "$project_pkg.cli:main"

[tool.setuptools.packages.find]
include = ["$project_pkg*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=$project_pkg --cov-report=term-missing --cov-fail-under=80"
