[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsimons-$project"
version = "0.1.0"
description = "$shortDescription"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [
    { name = "lsimons" }
]

[project.scripts]
# $project = "$project_pkg.cli:main"

[tool.setuptools.packages.find]
include = ["$project_pkg*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "basedpyright>=1.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=$project_pkg --cov-report=term-missing --cov-fail-under=80"
